--- a/Video_Pipeline.ipynb
+++ b/Video_Pipeline.ipynb
@@ -58,17 +58,20 @@
     "img = mpimg.imread('media\\\\bbox-example-image.jpg')\n",
     "#img = mpimg.imread('media\\\\test_images\\\\test1.jpg')\n",
     "# Define a single function that can extract features using hog sub-sampling and make predictions\n",
-    "def find_cars(img, ystart, ystop, scale, svc, X_scaler, orient, pix_per_cell, cell_per_block, spatial_size, hist_bins):\n",
+    "def find_cars(img, ystart, ystop, scale, svc, X_scaler, orient, pix_per_cell, cell_per_block, \n",
+    "              spatial_size, hist_bins, cspace):\n",
     "    \n",
     "    draw_img = np.copy(img)\n",
     "    img = img.astype(np.float32)/255\n",
     "    \n",
     "    img_tosearch = img[ystart:ystop,:,:]\n",
-    "    ctrans_tosearch = convert_color(img_tosearch, conv='RGB2YCrCb')\n",
+    "    ctrans_tosearch = convert_color(img_tosearch, conv=cspace)\n",
     "    if scale != 1:\n",
     "        imshape = ctrans_tosearch.shape\n",
-    "        ctrans_tosearch = cv2.resize(ctrans_tosearch, (np.int(imshape[1]/scale), np.int(imshape[0]/scale)))\n",
+    "        ctrans_tosearch = cv2.resize(ctrans_tosearch, (np.int(imshape[1]/scale), \n",
+    "                                                       np.int(imshape[0]/scale)))\n",
     "        \n",
+    "    # Extract channels\n",
     "    ch1 = ctrans_tosearch[:,:,0]\n",
     "    ch2 = ctrans_tosearch[:,:,1]\n",
     "    ch3 = ctrans_tosearch[:,:,2]\n",
@@ -121,7 +124,13 @@
     "                win_draw = np.int(window*scale)\n",
     "                cv2.rectangle(draw_img,(xbox_left, ytop_draw+ystart),(xbox_left+win_draw,ytop_draw+win_draw+ystart),(0,0,255),6) \n",
     "                \n",
-    "    return draw_img\n",
+    "                # Create list for my windowwwws\n",
+    "                win_list = []\n",
+    "                win_list.append(((xbox_left, ytop_draw+ystart),\n",
+    "                                 (xbox_left+win_draw, ytop_draw+win_draw+ystart)))\n",
+    "    \n",
+    "    return draw_img, win_list\n",
+    "    \n",
     "    \n",
     "ystart = 400\n",
     "ystop = 700\n",
